@@ -246,6 +246,10 @@ CVS code -
 	  work properly when we've replaced one or more instances of a
 	  string in copy and haven't yet updated current->data to match
 	  copy. (DLR)
+  do_find_bracket()
+	- Miscellaneous cleanups: rename variables for consistency, and
+	  save the search direction and regexp setting in two bools
+	  instead of one flags variable. (DLR)
 - utils.c:
   num_of_digits()
 	- Use a size_t instead of an int, and rename to digits(). (DLR)
